@@ -541,7 +541,7 @@ else {
 												print "<input name='field" . $fieldName . $i . "' id='field" . $fieldName . $i . "' maxlength=10 value='" . dateConvertBack($guid, $fieldValues[$field["name"]]) . "' type='text' style='width: 300px'>" ;
 												print "<script type='text/javascript'>" ;
 													print "var field" . $fieldName . $i . "=new LiveValidation('field" . $fieldName . $i . "');" ;
-													print "field" . $fieldName . $i . ".add( Validate.Format, {pattern: <? if ($_SESSION[$guid]["i18n"]["dateFormatRegEx"]=="") {  print "/^(0[1-9]|[12][0-9]|3[01])[- /.](0[1-9]|1[012])[- /.](19|20)\d\d$/i" ; } else { print $_SESSION[$guid]["i18n"]["dateFormatRegEx"] ; } ?>, failureMessage: 'Use dd/mm/yyyy.' } );" ; 
+													print "field" . $fieldName . $i . ".add( Validate.Format, {pattern:" ; if ($_SESSION[$guid]["i18n"]["dateFormatRegEx"]=="") {  print "/^(0[1-9]|[12][0-9]|3[01])[- /.](0[1-9]|1[012])[- /.](19|20)\d\d$/i" ; } else { print $_SESSION[$guid]["i18n"]["dateFormatRegEx"] ; } print ", failureMessage: 'Use dd/mm/yyyy.' } );" ; 
 												print "</script>" ;
 												print "<script type='text/javascript'>" ;
 													print "$(function() {" ;
